# test-task--docker-logs-unit-tests

./: .gitlab-ci.yml  README.md  pyproject.toml
.github/workflows/: gitlab-mirror.yaml
src/logs_docker_containers/: main.py
tests/logs_docker_containers/: test_main.py
