[tool.poetry]
name = "logs-docker-containers"
version = "0.1.0"
description = "Test task (logs, aiohttp, socket, docker, pytest)"
authors = ["SciBourne <bourne-sci-hack@yandex.ru>"]
license = "GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.8.4"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
pytest-asyncio = "^0.21.0"
black = "^23.1.0"
flake8 = "^6.0.0"
jedi = "^0.18.2"
yapf = "^0.32.0"
autopep8 = "^2.0.2"
mypy = "^1.1.1"

[tool.pytest.ini_options]
addopts = "--strict-markers"
testpaths = ["tests"]

markers = [
    "asyncio",
    "logs",
    "logs_aiohttp_specific"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
